# letter-box

./: .gitignore  antora-playbook.yml  compose.yml  setup.py  solve.py
.github/workflows/: pages.yml  python-app.yml
client/: .mocharc.json  Dockerfile  package-lock.json  package.json  tsconfig.json
client/src/components/: burndown.svelte  input.svelte  solutions.svelte
client/src/lib/: gameboard.ts  solutions.test.ts  solutions.ts  two_controls.ts
client/src/routes/: +layout.svelte  +page.svelte
client/src/styles/: constants.ts
docs/: antora.yml
docs/modules/ROOT/: nav.adoc
docs/modules/ROOT/pages/: index.adoc
letter_box/: games.py  graph_solutions.py  graphs.py  oracles.py  solve.py  utils.py
profiling/: scores_perf.py  solve_perf.py
python/: setup.py
python/letter_box/: graphs.py  solve.py
python/profiling/: scores_perf.py
python/tests/: test_games.py  test_utils.py
server/: Cargo.toml  Dockerfile
server/benches/: words.rs
server/src/: lib.rs  main.rs
server/src/handlers/: mod.rs
server/src/solver/: graph.rs  lexicon.json  lexicon.rs  mod.rs  solutions.rs  words.rs
server/tests/: handlers.rs  solver.rs
tests/: test_games.py  test_oracles.py  test_utils.py  test_words.py
visuals/: board.py  boards.py  custom_config.yml  intro.py
