[package]
name = "letter_boxed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"

[profile.bench]
debug = true

[profile.release]
debug = true

[dependencies.poem]
version = "2.0.1"
features = ["test"]

[[bin]]
name = "letter_boxed"
path = "src/main.rs"

[lib]
name = "letter_boxed"
path = "src/lib.rs"

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "words"
harness = false