[package]
name = "letter_boxed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.1"
rand = "0.8.5"
rust-embed = "8.3.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"

[[bin]]
name = "letter_boxed"
path = "src/main.rs"
test = false # main binary is double tested at this point

[dependencies.poem]
version = "2.0.1"
features = ["test", "embed"]

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "words"
harness = false
